@@ -177,7 +177,7 @@ public class ClassloaderExecutorTest {
 		assertArrayEquals(expected, actual);
 	}
 
-	@Ignore("Causes circular cloning, must be fixed")
+//	@Ignore("Causes circular cloning, must be fixed")
 	@Test
 	public void loadsObjectGraphThatIncludesCollectionInSpecifiedClassloaderAndReturnsResultInOriginalClassloader() throws Exception {
 		final MockClassLoader classloader = createClassloader();
